--- a/two_body/README
+++ b/two_body/README
@@ -87,9 +87,12 @@ energy oscillating around its true value.
 In the presence of dissipative forces (e.g. dynamical friction), the leapfrog method
 scheme is characterized by error scaling in position and velocity is of order
 (time step)^3 and (time step), respectively, on a single step (see
-http://physics.bu.edu/py502/lectures3/cmotion.pdf). An alternative form of the method
-is preferred in the presence of dissipative forces but it is not yet implemented here,
-such as the Euler-Richardson method (see e.g. http://www.physics.udel.edu/~bnikolic/teaching/phys660/numerical_ode/node4.html).
+http://physics.bu.edu/py502/lectures3/cmotion.pdf, also available
+in ../refs/Sandvik_2018.pdf). An alternative form of the method is preferred in
+the presence of dissipative forces but it is not yet implemented here, such as the
+Euler-Richardson method (see e.g.
+http://www.physics.udel.edu/~bnikolic/teaching/phys660/numerical_ode/node4.html,
+also available in ../refs/Allen_2014.pdf).
 
 Beware that the scheme may lead to orbit precession if the integration step is
 not small enough. As a general rule of thumb, the time step delta_t should
@@ -392,6 +395,12 @@ the case e=0, the orbital parameters set by the initial conditions correspond,
 at best, to *osculating* parameters in this case. The same is true for non-spherically
 symmetric potentials.
 
+For a reference of celestial mechanics and Keplerian orbital elements in 3D see
+http://www.sns.ias.edu/ckfinder/userfiles/files/isima1.pdf, also available in
+../refs/Tremaine_2014.pdf.
+For a reference on osculating orbits see http://adsabs.harvard.edu/abs/2016arXiv160900915K
+also available in ../refs/Klioner_2016.pdf.
+
 
 3) Backwards integration. When integrating an orbit backwards in time, beware that
 the (osculating) orbital parameters correspond to the final (present-day) state, as
@@ -438,17 +447,20 @@ assumptions:
 
 		- It may be worth exploring other parameterizations of the DF force, in particular
 		of the Couloumb logarithm;
-			- See Zentner and Bullock (2003, https://iopscience.iop.org/article/10.1086/378797/pdf)
-			- See https://galpy.readthedocs.io/en/v1.4.1/reference/potentialchandrasekhardynfric.html
+			- See Zentner and Bullock (2003,
+			  https://iopscience.iop.org/article/10.1086/378797/pdf)
+			- Galpy's documentation:
+			  https://galpy.readthedocs.io/en/v1.4.1/reference/potentialchandrasekhardynfric.html
 			- See Petts et al. (2016; https://arxiv.org/abs/1607.04284)
 
 		- Different sources in the literature use different values of M:
 			- Besla et al. (2007, https://iopscience.iop.org/article/10.1086/521385/pdf,
 			their equation 5) use the *total* mass; this is the most
 			common approach (see also Semczuk et al. 2018, their equation B3)
-			- Dierickx & Loeb (2017a, https://iopscience.iop.org/article/10.3847/1538-4357/836/1/92/pdf)
-			use the mass within the object's tidal radius (see also Jiang & Binney 2000). This
-			approach is deemed the correct one, although the implementation of mass loss
-			through tidal stripping introduces more complexity and requires care to
-			be implemented correctly and self-consistently.
+			- Dierickx & Loeb (2017a,
+			https://iopscience.iop.org/article/10.3847/1538-4357/836/1/92/pdf)
+			use the mass within the object's tidal radius (see also Jiang & Binney 2000).
+			This approach is deemed the correct one, although the implementation of
+			mass loss through tidal stripping introduces more complexity and requires
+			care to be implemented correctly and self-consistently.
  
